--- a/404.html
+++ b/404.html
@@ -5,11 +5,11 @@
 		<link rel="icon" href="/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.c2c12152.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.5ad0328e.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/scheduler.ed9c6928.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/singletons.f85dcf42.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/singletons.a75bd823.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.b10980d4.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.3532c87b.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.64788ae6.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/preload-helper.a4192956.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.e0d541a2.js">
 	</head>
@@ -17,7 +17,7 @@
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_b42uu4 = {
+					__sveltekit_12s399b = {
 						base: "",
 						env: {}
 					};
@@ -25,8 +25,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.c2c12152.js"),
-						import("/_app/immutable/entry/app.3532c87b.js")
+						import("/_app/immutable/entry/start.5ad0328e.js"),
+						import("/_app/immutable/entry/app.64788ae6.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
