--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
 		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		
-		<link rel="modulepreload" href="./_app/immutable/entry/start.5ad0328e.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.ed9c6928.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.a75bd823.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index.b10980d4.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.64788ae6.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.e0a89e34.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.d582a31b.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.3b299f67.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index.38301e1d.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.34f28704.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/preload-helper.a4192956.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index.e0d541a2.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index.2e97fcb4.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_12s399b = {
+					__sveltekit_11n7blj = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -25,8 +25,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.5ad0328e.js"),
-						import("./_app/immutable/entry/app.64788ae6.js")
+						import("./_app/immutable/entry/start.e0a89e34.js"),
+						import("./_app/immutable/entry/app.34f28704.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
