--- a/404.html
+++ b/404.html
@@ -5,11 +5,11 @@
 		<link rel="icon" href="/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.9147481c.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.f852a398.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/scheduler.f1d6b102.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/singletons.e11c3dc7.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/singletons.668bf3be.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.1b9426c8.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.e6f9e141.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.164f363f.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/preload-helper.a4192956.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.b2d7bbe1.js">
 	</head>
@@ -17,7 +17,7 @@
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_4ivdzx = {
+					__sveltekit_17uzho2 = {
 						base: "",
 						env: {}
 					};
@@ -25,8 +25,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.9147481c.js"),
-						import("/_app/immutable/entry/app.e6f9e141.js")
+						import("/_app/immutable/entry/start.f852a398.js"),
+						import("/_app/immutable/entry/app.164f363f.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
