--- a/404.html
+++ b/404.html
@@ -5,11 +5,11 @@
 		<link rel="icon" href="/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.5e55e3cf.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.d06dfc61.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/scheduler.f1d6b102.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/singletons.90ef641b.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/singletons.45915d8f.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.1b9426c8.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.1c6a78bb.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.632e51cc.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/preload-helper.a4192956.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.b2d7bbe1.js">
 	</head>
@@ -17,7 +17,7 @@
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_1tcvlk = {
+					__sveltekit_1b4o1j0 = {
 						base: "",
 						env: {}
 					};
@@ -25,8 +25,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.5e55e3cf.js"),
-						import("/_app/immutable/entry/app.1c6a78bb.js")
+						import("/_app/immutable/entry/start.d06dfc61.js"),
+						import("/_app/immutable/entry/app.632e51cc.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
