--- a/404.html
+++ b/404.html
@@ -5,19 +5,19 @@
 		<link rel="icon" href="/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.d06dfc61.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/scheduler.f1d6b102.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/singletons.45915d8f.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/index.1b9426c8.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.632e51cc.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.e1cc743a.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/scheduler.b0cee365.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/singletons.228f05f1.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/index.c4d764d5.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.cfb246fc.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/preload-helper.a4192956.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/index.b2d7bbe1.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/index.f6e1b1fc.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_1b4o1j0 = {
+					__sveltekit_7p5aih = {
 						base: "",
 						env: {}
 					};
@@ -25,8 +25,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.d06dfc61.js"),
-						import("/_app/immutable/entry/app.632e51cc.js")
+						import("/_app/immutable/entry/start.e1cc743a.js"),
+						import("/_app/immutable/entry/app.cfb246fc.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
