--- a/404.html
+++ b/404.html
@@ -5,11 +5,11 @@
 		<link rel="icon" href="/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.64426f67.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.63b6813e.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/scheduler.b0cee365.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/singletons.d1c3508c.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/singletons.74499621.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.c4d764d5.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.f43a43e8.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.e00e059b.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/preload-helper.a4192956.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.f6e1b1fc.js">
 	</head>
@@ -17,7 +17,7 @@
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_17mlnav = {
+					__sveltekit_9nlcvm = {
 						base: "",
 						env: {}
 					};
@@ -25,8 +25,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.64426f67.js"),
-						import("/_app/immutable/entry/app.f43a43e8.js")
+						import("/_app/immutable/entry/start.63b6813e.js"),
+						import("/_app/immutable/entry/app.e00e059b.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
