--- a/404.html
+++ b/404.html
@@ -5,11 +5,11 @@
 		<link rel="icon" href="/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.88efaa7a.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.328cf592.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/scheduler.b0cee365.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/singletons.f60d2428.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/singletons.49553437.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.c4d764d5.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.782aa3e2.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.0d79c456.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/preload-helper.a4192956.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.f6e1b1fc.js">
 	</head>
@@ -17,7 +17,7 @@
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_1ccm2nx = {
+					__sveltekit_p0xggs = {
 						base: "",
 						env: {}
 					};
@@ -25,8 +25,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.88efaa7a.js"),
-						import("/_app/immutable/entry/app.782aa3e2.js")
+						import("/_app/immutable/entry/start.328cf592.js"),
+						import("/_app/immutable/entry/app.0d79c456.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
