--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		
-		<link rel="modulepreload" href="./_app/immutable/entry/start.04ef2131.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.40da534f.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.b0cee365.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.ce823b57.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.e7f8ba71.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.c4d764d5.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.f5acecb2.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.c8239b84.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/preload-helper.a4192956.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.f6e1b1fc.js">
 	</head>
@@ -17,7 +17,7 @@
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_zxpisz = {
+					__sveltekit_lk2g3f = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -25,8 +25,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.04ef2131.js"),
-						import("./_app/immutable/entry/app.f5acecb2.js")
+						import("./_app/immutable/entry/start.40da534f.js"),
+						import("./_app/immutable/entry/app.c8239b84.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
