--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
 		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		
-		<link rel="modulepreload" href="./_app/immutable/entry/start.40da534f.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.b0cee365.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.e7f8ba71.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index.c4d764d5.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.c8239b84.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.dc0dc071.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.d5958d98.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.ee22f6a5.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index.3a7df3bb.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.67e0c3b4.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/preload-helper.a4192956.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index.f6e1b1fc.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index.9c944764.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_lk2g3f = {
+					__sveltekit_110sgkw = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -25,8 +25,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.40da534f.js"),
-						import("./_app/immutable/entry/app.c8239b84.js")
+						import("./_app/immutable/entry/start.dc0dc071.js"),
+						import("./_app/immutable/entry/app.67e0c3b4.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
