--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		
-		<link rel="modulepreload" href="./_app/immutable/entry/start.dc0dc071.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.9c7a6cb3.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.d5958d98.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.ee22f6a5.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.55e2e67b.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.3a7df3bb.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.67e0c3b4.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.0e30ffb2.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/preload-helper.a4192956.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.9c944764.js">
 	</head>
@@ -17,7 +17,7 @@
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_110sgkw = {
+					__sveltekit_1xp7i0g = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -25,8 +25,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.dc0dc071.js"),
-						import("./_app/immutable/entry/app.67e0c3b4.js")
+						import("./_app/immutable/entry/start.9c7a6cb3.js"),
+						import("./_app/immutable/entry/app.0e30ffb2.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
