--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		
-		<link rel="modulepreload" href="./_app/immutable/entry/start.cc4f8416.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.9b673f77.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.d5958d98.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.d99792fb.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.03785bff.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.3a7df3bb.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.37ab498d.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.518e27f2.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/preload-helper.a4192956.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.9c944764.js">
 	</head>
@@ -17,7 +17,7 @@
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_warsik = {
+					__sveltekit_1ezwa9q = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -25,8 +25,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.cc4f8416.js"),
-						import("./_app/immutable/entry/app.37ab498d.js")
+						import("./_app/immutable/entry/start.9b673f77.js"),
+						import("./_app/immutable/entry/app.518e27f2.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
